# quotes_bot_with_scraping_db

./: README.md  bot.py  connect.py  models.py  pyproject.toml  queries.py  scraping.py  seeds.py
json/: authors.json  quotes.json
